# LabyrinthComposer

./: .gitignore  AGENTS.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.codex/: project-git-workflow.json  project-ops-workflow.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs  preferences.rs
docs/: Labyrinth_Composer_空间谜题设计工具_研发设计文档_v0.1.docx  app-local-preferences.md  codex-git-workflow.md  codex-ops-workflow.md  collaboration-decision-record.md  development-plan.md  export-targets.md  inscape-visual-design-system.md  lcproj-package-assets.md  lcproj-package-prototype.md  phase0-acceptance-review.md  phase0-architecture-implementation.md  phase1-acceptance-review.md  phase1-architecture-implementation.md  phase1.5-acceptance-feedback.md  phase2-acceptance-review.md  phase2-architecture-implementation.md  phase3-acceptance-review.md  phase3-architecture-implementation.md  phase4-acceptance-review.md  phase4-architecture-implementation.md  phase4-productization-acceptance-review.md  phase4-productization-execution-plan.md  phase5-acceptance-review.md  phase5-architecture-implementation.md  phase6-acceptance-review.md  phase6-architecture-implementation.md  phase7-architecture-implementation.md  product-scope-confirmation.md  roadmap-status-and-next-phase.md
examples/: importer-contract.test.ts
scripts/: check-architecture.mjs  check-ci-workflow.mjs  check-docs.mjs  (+4 more)
(+41 files in other folders)
