[package]
name = "labyrinth-composer-desktop"
version = "0.1.0"
description = "Labyrinth Composer desktop shell"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
